--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,55 +5,53 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-
-permissions:
-  contents: read
-  packages: write
-
-env:
-  IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/teste
+  permissions:
+    contents: read
+    packages: write
 
 jobs:
-  build-and-push:
+  ci:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Opcional: prepara Node para testes/lint
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
 
-      - name: Install deps (se houver package.json)
+      - name: Install deps
         run: |
-          if [ -f package.json ]; then
-            if [ -f package-lock.json ]; then
-              npm ci
-            else
-              npm install --no-audit --no-fund
-            fi
+          if [ -f package-lock.json ]; then
+            npm ci
           else
-            echo "Sem package.json na raiz. Pulando install."
+            npm install
           fi
 
-      - name: Run tests (se houver script)
+      - name: Run tests (se tiver)
         run: |
-          if [ -f package.json ] && npm run | grep -qE '(^| )test( |$)'; then
+          if npm run | grep -q "test"; then
             npm test
           else
-            echo "Sem script de teste. Pulando."
+            echo "Sem script de teste. Pulando etapa."
           fi
 
-      # Login Docker Hub
-      - name: Docker login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # Opcional: linters
+      # - name: Lint
+      #   run: |
+      #     if npm run | grep -q "lint"; then
+      #       npm run lint
+      #     else
+      #       echo "Sem script lint. Pulando."
+      #     fi
+
+      - name: Set image tags
+        id: vars
+        run: |
+          echo "IMAGE=seuusuario/monitor" >> $GITHUB_OUTPUT
+          echo "TAG_SHA=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
@@ -61,17 +59,20 @@ jobs:
       - name: Setup Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Set SHORT_SHA
-        run: echo "SHORT_SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build e Push (usa Dockerfile padrão na raiz)
       - name: Build & Push
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: ./dockerfile
           push: true
           tags: |
-            ${{ env.IMAGE_NAME }}:latest
-            ${{ env.IMAGE_NAME }}:${{ env.SHORT_SHA }}
-          cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:build
-          cache-to: type=registry,ref=${{ env.IMAGE_NAME }}:buildcache,mode=max
+            ${{ steps.vars.outputs.IMAGE }}:latest
+            ${{ steps.vars.outputs.IMAGE }}:${{ steps.vars.outputs.TAG_SHA }}
+          cache-from: type=registry,ref=${{ steps.vars.outputs.IMAGE }}:build
+          cache-to: type=registry,ref=${{ steps.vars.outputs.IMAGE }}:buildcache,mode=max
