--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,78 +1,70 @@
-name: CI - Build & Push Docker
+name: CD - Deploy to Kubernetes
 
 on:
-  push:
-    branches: ["main"]
-  pull_request:
-    branches: ["main"]
-  permissions:
-    contents: read
-    packages: write
+  workflow_run:
+    workflows: ["CI - Build & Push Docker"]
+    types: ["completed"]
+
+permissions:
+  contents: read
 
 jobs:
-  ci:
+  deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
+    environment: production # opcional: exige aprovação
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install deps
-        run: |
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            npm install
-          fi
-
-      - name: Run tests (se tiver)
-        run: |
-          if npm run | grep -q "test"; then
-            npm test
-          else
-            echo "Sem script de teste. Pulando etapa."
-          fi
-
-      # Opcional: linters
-      # - name: Lint
-      #   run: |
-      #     if npm run | grep -q "lint"; then
-      #       npm run lint
-      #     else
-      #       echo "Sem script lint. Pulando."
-      #     fi
-
-      - name: Set image tags
+      - name: Set vars
         id: vars
         run: |
-          echo "IMAGE=denielkas/teste" >> $GITHUB_OUTPUT
+          echo "IMAGE=seuusuario/monitor" >> $GITHUB_OUTPUT
           echo "TAG_SHA=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+          echo "NAMESPACE=${{ secrets.K8S_NAMESPACE || 'default' }}" >> $GITHUB_OUTPUT
 
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Setup Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v4
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          version: 'latest'
 
-      - name: Build & Push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: |
-            ${{ steps.vars.outputs.IMAGE }}:latest
-            ${{ steps.vars.outputs.IMAGE }}:${{ steps.vars.outputs.TAG_SHA }}
-          cache-from: type=registry,ref=${{ steps.vars.outputs.IMAGE }}:build
-          cache-to: type=registry,ref=${{ steps.vars.outputs.IMAGE }}:buildcache,mode=max
+      - name: Configure kubeconfig
+        run: |
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
+
+      - name: Create namespace if not exists
+        run: |
+          kubectl get ns ${{ steps.vars.outputs.NAMESPACE }} || \
+          kubectl create ns ${{ steps.vars.outputs.NAMESPACE }}
+
+      # Aplica/garante os serviços/ingress/etc. estáticos (opcional na primeira vez)
+      - name: Apply base manifests (Service, Prometheus, Grafana, Nginx)
+        run: |
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/service.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/prometheus-deployment.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/grafana-deployment.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/nginx-deployment.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/nginx-service.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/prometheus-config.yaml || true
+
+      # Aplica/garante o Deployment (se ainda não existir)
+      - name: Apply app deployment (first time)
+        run: |
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/deployment.yaml
+
+      # Atualiza a imagem para a tag nova (idempotente)
+      - name: Set image to new tag
+        run: |
+          kubectl set image deployment/monitor monitor=${{ steps.vars.outputs.IMAGE }}:${{ steps.vars.outputs.TAG_SHA }} -n ${{ steps.vars.outputs.NAMESPACE }}
+
+      - name: Wait rollout
+        run: |
+          kubectl rollout status deployment/monitor -n ${{ steps.vars.outputs.NAMESPACE }} --timeout=120s
+
+      - name: Show services (debug)
+        run: |
+          kubectl get svc -n ${{ steps.vars.outputs.NAMESPACE }}
+          kubectl get pods -o wide -n ${{ steps.vars.outputs.NAMESPACE }}
