--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,86 +4,67 @@ on:
   workflow_run:
     workflows: ["CI - Build & Push Docker"]
     types: ["completed"]
-  workflow_dispatch:
 
 permissions:
   contents: read
 
 jobs:
   deploy:
-    if: >
-      ${{
-        (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success')
-        || github.event_name == 'workflow_dispatch'
-      }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    environment: production  # opcional: exige aprovação via Environments
-
-    env:
-      IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/teste
-      NAMESPACE: ${{ secrets.K8S_NAMESPACE || 'trabalho' }}
-      DEPLOYMENT: teste
-      CONTAINER: teste
+    environment: production # opcional: exige aprovação
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Descobre o SHA do commit do CI que disparou este CD (ou o atual, se manual)
-      - name: Resolve SHORT_SHA
+      - name: Set vars
+        id: vars
         run: |
-          if [ "${{ github.event_name }}" = "workflow_run" ]; then
-            SHA="${{ github.event.workflow_run.head_sha }}"
-          else
-            SHA="${GITHUB_SHA}"
-          fi
-          echo "FULL_SHA=$SHA" >> $GITHUB_ENV
-          echo "SHORT_SHA=${SHA:0:7}" >> $GITHUB_ENV
-          echo "Usando tag: ${SHA:0:7}"
+          echo "IMAGE=seuusuario/monitor" >> $GITHUB_OUTPUT
+          echo "TAG_SHA=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+          echo "NAMESPACE=${{ secrets.K8S_NAMESPACE || 'default' }}" >> $GITHUB_OUTPUT
 
-      - name: Instalar kubectl
+      - name: Setup kubectl
         uses: azure/setup-kubectl@v4
         with:
-          version: "latest"
+          version: 'latest'
 
-      - name: Configurar kubeconfig (via KUBE_CONFIG_DATA)
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+      - name: Configure kubeconfig
         run: |
-          mkdir -p ~/.kube
-          echo "$KUBE_CONFIG_DATA" | base64 -d > ~/.kube/config
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
 
-      - name: Verificar cluster
+      - name: Create namespace if not exists
         run: |
-          kubectl version --client=true
-          kubectl cluster-info
-          kubectl get ns
+          kubectl get ns ${{ steps.vars.outputs.NAMESPACE }} || \
+          kubectl create ns ${{ steps.vars.outputs.NAMESPACE }}
 
-      - name: Criar namespace se não existir
+      # Aplica/garante os serviços/ingress/etc. estáticos (opcional na primeira vez)
+      - name: Apply base manifests (Service, Prometheus, Grafana, Nginx)
         run: |
-          kubectl get ns "$NAMESPACE" || kubectl create ns "$NAMESPACE"
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/service.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/prometheus-deployment.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/grafana-deployment.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/nginx-deployment.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/nginx-service.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/prometheus-config.yaml || true
 
-      # (Opcional, só na primeira vez) Aplica os manifests estáticos se ainda não existirem
-      - name: Apply base manifests (primeira vez / idempotente)
+      # Aplica/garante o Deployment (se ainda não existir)
+      - name: Apply app deployment (first time)
         run: |
-          kubectl apply -n "$NAMESPACE" -f k8s/service.yaml || true
-          kubectl apply -n "$NAMESPACE" -f k8s/prometheus-config.yaml || true
-          kubectl apply -n "$NAMESPACE" -f k8s/prometheus-deployment.yaml || true
-          kubectl apply -n "$NAMESPACE" -f k8s/grafana-deployment.yaml || true
-          kubectl apply -n "$NAMESPACE" -f k8s/grafana-service.yaml || true
-          # seu deployment do app
-          kubectl apply -n "$NAMESPACE" -f k8s/deployment.yaml || true
+          kubectl apply -n ${{ steps.vars.outputs.NAMESPACE }} -f k8s/deployment.yaml
 
-      # Atualiza a imagem do Deployment "teste" (container "teste") para a tag do commit
+      # Atualiza a imagem para a tag nova (idempotente)
       - name: Set image to new tag
         run: |
-          kubectl -n "$NAMESPACE" set image deployment/$DEPLOYMENT \
-            $CONTAINER=${IMAGE_NAME}:${SHORT_SHA} --record
+          kubectl set image deployment/monitor monitor=${{ steps.vars.outputs.IMAGE }}:${{ steps.vars.outputs.TAG_SHA }} -n ${{ steps.vars.outputs.NAMESPACE }}
 
-      - name: Aguardar rollout
+      - name: Wait rollout
         run: |
-          kubectl -n "$NAMESPACE" rollout status deployment/$DEPLOYMENT --timeout=180s
+          kubectl rollout status deployment/monitor -n ${{ steps.vars.outputs.NAMESPACE }} --timeout=120s
 
-      - name: Mostrar recursos (debug)
+      - name: Show services (debug)
         run: |
-          kubectl get deploy,svc,pods -o wide -n "$NAMESPACE"
+          kubectl get svc -n ${{ steps.vars.outputs.NAMESPACE }}
+          kubectl get pods -o wide -n ${{ steps.vars.outputs.NAMESPACE }}
