--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,9 +31,15 @@ jobs:
         with:
           version: 'latest'
 
-      # Configuração manual para o Kubernetes, sem kubeconfig
-      - name: Configure Kubernetes Access (manual)
+      - name: Configure kubeconfig
         run: |
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBE_CONFIG_DATA }}" | base64 -d > $HOME/.kube/config
+
+      # Configuração de acesso manual ao Kubernetes sem alterar o kubeconfig
+      - name: Manual Kubernetes Setup (optional)
+        run: |
+          echo "Configuring Kubernetes manually..."
           kubectl config set-cluster my-cluster --server=https://your-cluster-api-server --certificate-authority=/home/runner/.kube/ca.crt
           kubectl config set-credentials my-user --token=${{ secrets.K8S_TOKEN }}
           kubectl config set-context my-context --cluster=my-cluster --user=my-user --namespace=${{ steps.vars.outputs.NAMESPACE }}
