--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+
       - name: Install deps
         run: |
           if [ -f package-lock.json ]; then
@@ -25,35 +27,34 @@ jobs:
           else
             npm install
           fi
-      - name: Run  (se tiver)
-        run: |
-          if npm run | grep -q "test"; then
-            npm test
-          else
-            echo "Sem script de teste. Pulando etapa."
-          fi
-      # Opcional: linters
-      # - name: Lint
+
+      # Removi a etapa de teste
+      # - name: Run tests (se tiver)
       #   run: |
-      #     if npm run | grep -q "lint"; then
-      #       npm run lint
+      #     if npm run | grep -q "test"; then
+      #       npm test
       #     else
-      #       echo "Sem script lint. Pulando."
+      #       echo "Sem script de teste. Pulando etapa."
       #     fi
+
       - name: Set image tags
         id: vars
         run: |
           echo "IMAGE=seuusuario/monitor" >> $GITHUB_OUTPUT
           echo "TAG_SHA=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
+
       - name: Setup Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build & Push
         uses: docker/build-push-action@v6
         with:
